Test JWT realm with HTTPS URL for PKC JWKSet